yml/NFSDirect/nfsDirect.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: pv-demo
  name: nfs-direct-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx-nfs.example.com
    http:
      paths:
      - path: / 
        pathType: ImplementationSpecific       
        backend:
          service:
            name: nfs-direct-service
            port: 
              number: 80
